# coilia-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  coilia.bat  pyproject.toml
.github/workflows/: validate.yml
.reasonix/readme-versions/: README-v20260618-0026.md  README.zh-v20260618-0026.md
config/: agent.yaml  component_registry.yaml  tao.yaml  wuxing.yaml
config/species/: coilia_brachygnathus.yaml  coilia_grayii.yaml  coilia_mystus.yaml  coilia_nasus.yaml
data/knowledge_base/literature/: coilia_literature_database.md  coilia_zotero_import.bib  coilia_zotero_with_pdfs.bib
data/knowledge_base/species/: coilia-brachygnathus.md  coilia-grayii.md  coilia-mystus.md  coilia-nasus.md
docs/: ARCHITECTURE.md
pn_template/: test_pn_template.py
scripts/: __init__.py  early_life_analysis.py  feeding_analysis.py  fish_kb_add_species.py  genetics_analysis.py  literature_search.py  migration_analysis.py  species_kb.py  stock_assessment.py
src/: __init__.py  adapter.py  main.py
src/agent/: __init__.py  cognitive_analyzer.py  orchestrator.py  react_loop.py  species_registry.py
src/prompts/: __init__.py  system_prompts.py
src/skills/analyze-early-life/: SKILL.md
src/skills/analyze-feeding/: SKILL.md
src/skills/analyze-genetics/: SKILL.md
src/skills/analyze-migration/: SKILL.md
src/skills/assess-stock/: SKILL.md
tests/: __init__.py  conftest.py  test_analysis_scripts.py  test_coilia.py  test_scripts.py  test_smoke.py  test_species_expansion.py  test_triangle_integration.py  triangle_flow.py
(+1 files in other folders)
