[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "coilia-agent"
# ⚠️ VERSION.yaml is the single source of truth for version numbers.
# This field is for PyPI packaging only; runtime version is read from VERSION.yaml.
version = "1.4.0"
description = "Coilia Agent — 刀鲚专研 Agent (P₂)，淡水渔业研究中心 刘凯研究员课题组"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# 领域分析脚本的完整依赖（当前脚本仅使用 stdlib，以下为未来扩展预留）
analysis = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]

[project.scripts]
coilia = "src.main:main"
